Style: fix alignment

--- a/front/src/styles/components/Form.css
+++ b/front/src/styles/components/Form.css
@@ -1,12 +1,32 @@
-form > *{
+form>* {
     margin: 1em;
+}
+
+form>div {
+    /*     display: flex;
+    align-items: center;
+    justify-content: space-between; */
+}
+
+.field-wrapper {
+    display: flex;
+    flex-direction: column;
+}
+
+.label-input-row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1rem;
 }
 
 .error {
     color: red;
+    margin: 0.5rem 0 0 0;
+    font-size: 0.9rem;
 }
 
-@media (width <= 500px) {
+@media (width <=500px) {
     .form {
         padding: 0;
     }
@@ -14,6 +34,11 @@ form > *{
     .form-container {
         margin-left: 0;
         margin-right: 0;
+    }
+
+    .label-input-row {
+        flex-direction: column;
+        align-items: stretch;
     }
 }
 
