--- a/front/src/styles/components/Header.css
+++ b/front/src/styles/components/Header.css
@@ -6,6 +6,7 @@
     padding: 1em 0;
     height: 3em;
     align-items: center;
+    font-size: 1.2em;
 
     border-bottom: 2px solid var(--yellow-dark);
     background-color: var(--bg-second);
@@ -16,11 +17,9 @@
     font-weight: bold;
     color: transparent;
     background-clip: text;
-    background-image: linear-gradient(
-        to right, 
-        var(--orange-primary), 
-        var(--yellow-primary)      
-    );
+    background-image: linear-gradient(to right,
+            var(--orange-primary),
+            var(--yellow-primary));
 }
 
 nav {
@@ -39,18 +38,29 @@ nav {
 
 .search-bar {
     flex-shrink: 1;
-    padding: 0.5rem;
+    padding: 0.6em 1em;
     margin: 0;
     border-radius: 8px 0 0 8px;
     border: 1px solid transparent;
 }
 
+.search-bar:focus {
+    outline: none;
+    border: 1px solid var(--yellow-dark);
+}
+
 .form-search-bar button {
     margin: 0;
+    padding: 0.4em 0.6em;
     border-radius: 0 8px 8px 0;
     border: 1px solid transparent;
+    border-left: 1px solid var(--text-second);
     background-color: var(--bg-highlight);
     margin-right: 1em;
+}
+
+.search-icon {
+    width: 1.5rem;
 }
 
 .profile {
@@ -58,7 +68,7 @@ nav {
     margin-right: 1em;
 }
 
-@media (width <= 450px) {
+@media (width <=450px) {
     .logo {
         font-size: 1em;
     }
